--- a/Day2 Combo/Day2 Combo.csproj
+++ b/Day2 Combo/Day2 Combo.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -70,9 +67,6 @@
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
     </Reference>
@@ -83,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Bullets\Util\code_BulletSpawn.cs" />
     <Compile Include="Assets\Scripts\Bullets\code_StaticBullet.cs" />
+    <Compile Include="Assets\Scripts\ButtonManager.cs" />
     <Compile Include="Assets\Scripts\Collision\code_CollisionDestroyDestroyable.cs" />
     <Compile Include="Assets\Scripts\Collision\code_CollisionHitPlayer.cs" />
     <Compile Include="Assets\Scripts\Despawn Scripts\code_DeleteBullet.cs" />
